# zappy-rs

./: .gitignore  Cargo.toml  README.md  server_protocol.md
gui/: Cargo.toml  README.md  __main__.py  requirements.txt
gui/core/: game_view.py  log_viewer.py  main_window.py  map_controls.py  map_view.py  player_panel.py  resource_viewer.py  server_connection.py  team_panel.py
gui/core/player/: PlayerManager.py
gui/core2/: game_view.py  main_window.py  map_controls.py  resource_viewer.py  server_connection.py  team_panel.py
gui/src/: footer.rs  game.rs  main.rs  navbar.rs  network.rs
gui/src/views/: logs.rs  map.rs  mod.rs  settings.rs
server/: Cargo.toml
server/src/: connection.rs  constant.rs  formater.rs  gui.rs  main.rs  map.rs  pending.rs  server.rs  team.rs  vec2.rs
server/src/handler/: ai.rs  command.rs  mod.rs
src/: cell.rs  client.rs  connection.rs  constant.rs  egg.rs  event.rs  formater.rs  gui.rs  main.rs  map.rs  pending.rs  player.rs  protocol.rs  resources.rs  server.rs  sound.rs  team.rs  vec2.rs
src/handler/: ai.rs  command.rs  graphics.rs  login.rs  mod.rs
