[workspace.package]
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/GodlyJaaaj/zappy-rs"
rust-version = "1.86.0"
keywords = ["zappy", "zappy-rs", "multithreaded", "blazing-fast", "epitech"]

[workspace]
members = [
    "gui", "server",
]
resolver = "3"

[workspace.dependencies]
log = "0.4.27"
env_logger = "0.11.8"