[package]
name = "gui"
version.workspace = true
edition.workspace = true

[dependencies]
iced = { version = "0.13.1", features = ["canvas", "debug", "tokio"] }
iced_futures = { version = "0.13.2" }
env_logger.workspace = true
log = { version = "0.4.27" }
futures = { version = "0.3.31" }
tokio = { version = "1.44.2", features = ["net", "macros", "io-util"] }
rand = "0.9.1"